# agiworkforce

./: .claudeignore  .eslintignore  .eslintrc.cjs  .gitignore  .mcp.json  .npmrc  .prettierignore  .vercelignore  ACCESSIBILITY_CHECKLIST.md  AGENTS.md  AGIWORKFORCE_IMPLEMENTATION_LOG.md  AGIWORKFORCE_RUST_REVERSE_ENGINEERING_PLAN.md  AGI_WORKFORCE.md  AGI_Workforce_Campaign_Plan.docx  AGI_Workforce_Content_Calendar.html  AGI_Workforce_PRD.md  APPLICATION_PREVIEW.md  ARCHITECTURE.md  AUDIT_2026-05-03.md  AUDIT_LOG.md  BATCH_API_IMPLEMENTATION.md  BROKEN_IMPORTS_SUMMARY.md  BUILD.md  CHANGELOG.md  CHECKPOINT_INDEX.md  CICD.md  CLAUDE.md  CODEBASE_STRUCTURE_REPORT.md  CODERABBIT_REVIEW.md  CODE_QUALITY.md  COMPETITIVE_DESKTOP_RESEARCH.md  COMPLETE_IMPLEMENTATION_CHECKLIST.md  CONTRADICTIONS_AND_QUESTIONS.md  CONTRIBUTING.md  CREDIT_REDUCTION_ANALYSIS.md  CURSOR_BUSINESS_MODEL_ANALYSIS.md  Cargo.toml  Customer_Policy_Research.md  DEAD_COMMANDS_AUDIT.md  DEBUGGING.md  (+144 more)
apps/cli/: ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
apps/cli/npm/: README.md  package.json
apps/cli/scripts/: demo.sh
apps/cli/src/: a2a.rs  a2a_ws.rs  agent.rs  agent_events.rs  agents.rs  app_server.rs  apply_patch.rs  auth.rs  auth_oauth.rs  cli_options.rs  cloud.rs  command_registry.rs  compaction.rs  config.rs  context.rs  conversations.rs  cost_ledger.rs  daemon.rs  design_system.rs  ecosystem.rs  errors.rs  exec_policy.rs  history.rs  hooks.rs  init.rs  lib.rs  main.rs  markdown.rs  marketplace.rs  mcp.rs  memory.rs  memory_pipeline.rs  message_queue.rs  model_catalog.rs  models.rs  models_cache.rs  notebook_edit.rs  oauth.rs  onboarding.rs  output.rs  (+27 more)
crates/agiworkforce-agent-graph-store/: Cargo.toml
crates/agiworkforce-agent-graph-store/src/: local.rs  store.rs
crates/agiworkforce-agent-identity/: Cargo.toml
crates/agiworkforce-agent-identity/src/: lib.rs
crates/agiworkforce-analytics/: Cargo.toml
crates/agiworkforce-analytics/src/: analytics_client_tests.rs  client.rs  client_tests.rs  events.rs  facts.rs  lib.rs  reducer.rs
crates/agiworkforce-ansi-escape/: Cargo.toml  README.md
crates/agiworkforce-api/: Cargo.toml
crates/agiworkforce-api/src/: auth.rs  common.rs  error.rs  lib.rs  provider.rs  rate_limits.rs  stubs.rs  telemetry.rs
crates/agiworkforce-app-server/: Cargo.toml  README.md
crates/agiworkforce-app-server-client/: Cargo.toml  README.md
crates/agiworkforce-app-server-client/src/: lib.rs  remote.rs
crates/agiworkforce-app-server-protocol/: Cargo.toml
crates/agiworkforce-app-server-protocol/src/: experimental_api.rs  export.rs  jsonrpc_lite.rs  lib.rs
crates/agiworkforce-app-server-protocol/tests/: schema_fixtures.rs
crates/agiworkforce-app-server-test-client/: Cargo.toml  README.md
crates/agiworkforce-app-server-test-client/src/: lib.rs  main.rs
crates/agiworkforce-app-server/src/: agiworkforce_message_processor.rs  analytics_utils.rs  app_server_tracing.rs  bespoke_event_handling.rs  codex_message_processor.rs  command_exec.rs  config_api.rs  config_manager.rs  config_manager_service.rs  config_manager_service_tests.rs  device_key_api.rs  dynamic_tools.rs  error_code.rs  external_agent_config_api.rs  filters.rs  fs_api.rs  fs_watch.rs  fuzzy_file_search.rs  in_process.rs  lib.rs  main.rs  message_processor.rs  models.rs  outgoing_message.rs  request_serialization.rs  server_request_error.rs  thread_state.rs  thread_status.rs
crates/agiworkforce-app-server/tests/: jsonrpc.rs
crates/agiworkforce-apply-patch/: Cargo.toml  apply_patch_tool_instructions.md
crates/agiworkforce-apply-patch/src/: lib.rs  main.rs  parser.rs
crates/agiworkforce-apply-patch/tests/: scenarios.rs
crates/agiworkforce-arg0/: Cargo.toml
crates/agiworkforce-arg0/src/: lib.rs
crates/agiworkforce-artifacts/: Cargo.toml
crates/agiworkforce-artifacts/src/: tests.rs
crates/agiworkforce-aws-auth/: Cargo.toml
crates/agiworkforce-backend-client/: Cargo.toml
crates/agiworkforce-backend-client/src/: agiworkforce_backend_openapi_models.rs  client.rs  lib.rs  types.rs
crates/agiworkforce-backend-openapi-models/: Cargo.toml
crates/agiworkforce-chatgpt/: Cargo.toml
crates/agiworkforce-chatgpt/src/: apply_command.rs  chatgpt_client.rs  chatgpt_token.rs  connectors.rs  get_task.rs  lib.rs  workspace_settings.rs
crates/agiworkforce-client/: Cargo.toml  README.md
crates/agiworkforce-client/src/: chatgpt_cloudflare_cookies.rs  chatgpt_hosts.rs  custom_ca.rs  default_client.rs  lib.rs  transport.rs
crates/agiworkforce-client/tests/: ca_env.rs
crates/agiworkforce-cloud-requirements/: Cargo.toml
crates/agiworkforce-cloud-requirements/src/: lib.rs
crates/agiworkforce-cloud-tasks/: Cargo.toml
crates/agiworkforce-cloud-tasks-client/: Cargo.toml
crates/agiworkforce-cloud-tasks-client/src/: http.rs
crates/agiworkforce-cloud-tasks-mock-client/: Cargo.toml
crates/agiworkforce-cloud-tasks-mock-client/src/: mock.rs
crates/agiworkforce-cloud-tasks/src/: agiworkforce_tui.rs  app.rs  cli.rs  env_detect.rs  lib.rs  mock_backend.rs  new_task.rs  ui.rs  util.rs
crates/agiworkforce-cloud-tasks/tests/: env_filter.rs
crates/agiworkforce-code-mode/: Cargo.toml
crates/agiworkforce-code-mode/src/: description.rs  lib.rs  service.rs
crates/agiworkforce-command-registry/: Cargo.toml
crates/agiworkforce-command-registry/src/: lib.rs
crates/agiworkforce-command-registry/tests/: slash_palette_golden.rs  slash_palette_golden.txt
crates/agiworkforce-config/: Cargo.toml
crates/agiworkforce-config/src/: config_requirements.rs  config_toml.rs  constraint.rs  diagnostics.rs  fingerprint.rs  hooks.rs  lib.rs  loader.rs  marketplace.rs  permissions_toml.rs  profile_toml.rs  requirements_exec_policy.rs  state.rs  thread_config.rs  types.rs
crates/agiworkforce-connectors/: Cargo.toml
crates/agiworkforce-connectors/src/: accessible.rs  filter.rs  lib.rs  merge.rs  metadata.rs
crates/agiworkforce-core-api/: Cargo.toml
crates/agiworkforce-core-api/src/: lib.rs
crates/agiworkforce-core-plugins/: Cargo.toml
crates/agiworkforce-core-skills/: Cargo.toml
(+7993 files in other folders)
