[workspace]
members = [
  "apps/desktop/src-tauri",
  "apps/cli",
  "crates/*",
]
# Sprint 0 (FIX-006a) workspace exclusions:
# - `agiworkforce-tui` and `agiworkforce-tui_app_server` are mid-port from
#   codex-rs and have 396 unresolved-symbol errors between them. Sprint 5's
#   FIX-021 plans to delete `tui_app_server` outright and finish the port for
#   `tui`; until then, running them through CI just keeps `main` red. The
#   binaries that ship today (`apps/desktop`, `apps/cli`) do **not** depend on
#   either crate.
# - `agiworkforce-cloud-tasks` depends on `agiworkforce-tui` so it has to ride
#   along until the TUI port is finished.
# - `crates/agiworkforce-utils` is a pre-existing exclusion (legacy stub).
exclude = [
  # Pre-existing exclusions (kept)
  "crates/agiworkforce-utils",
  "crates/agiworkforce-tui",
  "crates/agiworkforce-tui_app_server",
  "crates/agiworkforce-cloud-tasks",
  # FIX-022 (Sprint 5): 98 codex-rs port crates that no shipping
  # binary (apps/desktop or apps/cli) reaches via cargo tree. Their
  # source stays in crates/ for future re-inclusion if a feature
  # is wired up, but excluding them from the workspace shrinks
  # cargo build / audit / lock-resolution surface dramatically.
  "crates/agiworkforce-agent-graph-store",
  "crates/agiworkforce-agent-identity",
  "crates/agiworkforce-analytics",
  "crates/agiworkforce-ansi-escape",
  "crates/agiworkforce-api",
  "crates/agiworkforce-app-server",
  "crates/agiworkforce-app-server-client",
  "crates/agiworkforce-app-server-protocol",
  "crates/agiworkforce-app-server-test-client",
  "crates/agiworkforce-apply-patch",
  "crates/agiworkforce-arg0",
  "crates/agiworkforce-artifacts",
  "crates/agiworkforce-aws-auth",
  "crates/agiworkforce-backend-client",
  "crates/agiworkforce-backend-openapi-models",
  "crates/agiworkforce-chatgpt",
  "crates/agiworkforce-client",
  "crates/agiworkforce-cloud-requirements",
  "crates/agiworkforce-cloud-tasks-client",
  "crates/agiworkforce-cloud-tasks-mock-client",
  "crates/agiworkforce-code-mode",
  "crates/agiworkforce-codebase-search",
  "crates/agiworkforce-common",
  "crates/agiworkforce-config",
  "crates/agiworkforce-core",
  "crates/agiworkforce-core-api",
  "crates/agiworkforce-core-plugins",
  "crates/agiworkforce-core-skills",
  "crates/agiworkforce-credit-status",
  "crates/agiworkforce-curl",
  "crates/agiworkforce-debug-test-binary-network-error",
  "crates/agiworkforce-debug-test-fs-bench",
  "crates/agiworkforce-debug-test-fs-symlink",
  "crates/agiworkforce-default-bridge",
  "crates/agiworkforce-event-handler-permission-broker",
  "crates/agiworkforce-event-store",
  "crates/agiworkforce-events",
  "crates/agiworkforce-exec",
  "crates/agiworkforce-exec-server",
  "crates/agiworkforce-execpolicy-legacy",
  "crates/agiworkforce-experimental-api-macros",
  "crates/agiworkforce-feature-overrides",
  "crates/agiworkforce-features",
  "crates/agiworkforce-file-search",
  "crates/agiworkforce-file-system",
  "crates/agiworkforce-git-utils",
  "crates/agiworkforce-image",
  "crates/agiworkforce-keyring-store",
  "crates/agiworkforce-linux-sandbox",
  "crates/agiworkforce-login",
  "crates/agiworkforce-mcp",
  "crates/agiworkforce-mcp-cli-client",
  "crates/agiworkforce-mcp-server",
  "crates/agiworkforce-mcp-types",
  "crates/agiworkforce-memories-read",
  "crates/agiworkforce-memories-write",
  "crates/agiworkforce-model-provider",
  "crates/agiworkforce-model-provider-info",
  "crates/agiworkforce-models-manager",
  "crates/agiworkforce-ollama",
  "crates/agiworkforce-permissions-broker",
  "crates/agiworkforce-permissions-events",
  "crates/agiworkforce-permissions-event-tracker",
  "crates/agiworkforce-permissions-policy",
  "crates/agiworkforce-permissions-prompts",
  "crates/agiworkforce-permissions-utility-fns",
  "crates/agiworkforce-plugin",
  "crates/agiworkforce-process-hardening",
  "crates/agiworkforce-protocol-test-utils",
  "crates/agiworkforce-response-debug-context",
  "crates/agiworkforce-rmcp-client",
  "crates/agiworkforce-rmcp-server",
  "crates/agiworkforce-rollout-trace",
  "crates/agiworkforce-sandboxing",
  "crates/agiworkforce-secrets",
  "crates/agiworkforce-shell-command",
  "crates/agiworkforce-shell-escalation",
  "crates/agiworkforce-skill-store",
  "crates/agiworkforce-state",
  "crates/agiworkforce-test-binary-support",
  "crates/agiworkforce-test-utils",
  "crates/agiworkforce-thread-store",
  "crates/agiworkforce-tools",
  "crates/agiworkforce-utils-cargo-bin",
  "crates/agiworkforce-utils-image-encoder",
  "crates/agiworkforce-utils-input",
  "crates/agiworkforce-utils-output-truncation",
  "crates/agiworkforce-utils-plugins",
  "crates/agiworkforce-utils-pty",
  "crates/agiworkforce-utils-regex",
  "crates/agiworkforce-utils-sandbox-summary",
  "crates/agiworkforce-utils-stripe",
  "crates/agiworkforce-utils-stripe-mocks",
  "crates/agiworkforce-utils-system-prompt",
  "crates/agiworkforce-utils-system-prompt-paths",
  "crates/agiworkforce-utils-text-format",
  "crates/agiworkforce-utils-time-format",
  "crates/agiworkforce-utils-titlecase",
  "crates/agiworkforce-utils-uri",
  "crates/agiworkforce-utils-zip",
  "crates/agiworkforce-v8-poc",
  "crates/agiworkforce-windows-sandbox-rs",
  "crates/app_test_support",
  "crates/core_test_support",
  "crates/mcp_test_support",
]
resolver = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
panic = "abort"




[profile.dev]
debug = true           # enable debug info for readable backtraces
opt-level = 0
split-debuginfo = "off"


[profile.dev.package."*"]
debug = 0
opt-level = 0

[patch.crates-io]
tokio-tungstenite = { git = "https://github.com/openai-oss-forks/tokio-tungstenite", rev = "132f5b39c862e3a970f731d709608b3e6276d5f6" }
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "9200079d3b54a1ff51072e24d81fd354f085156f" }

[patch."ssh://git@github.com/openai-oss-forks/tungstenite-rs.git"]
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "9200079d3b54a1ff51072e24d81fd354f085156f" }
