[workspace]
members = [
  "apps/desktop/src-tauri",
  "apps/cli",
  "crates/*",
]
# 2026-05-03 cleanup: 70 codex-rs port crates removed from disk (was FIX-022
# exclude list). Original codex-cli source preserved at ~/Desktop/reference/codex-cli/
# for future re-port if any feature is needed. Shipping binaries (apps/cli +
# apps/desktop/src-tauri) only depend on `agiworkforce-protocol` and
# `agiworkforce-sandbox-policy` via path. Other workspace crates (44) compile
# cleanly via `cargo check --workspace` and may be pruned in a future pass.
exclude = []
resolver = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
panic = "abort"




[profile.dev]
debug = true           # enable debug info for readable backtraces
opt-level = 0
split-debuginfo = "off"


[profile.dev.package."*"]
debug = 0
opt-level = 0

[patch.crates-io]
tokio-tungstenite = { git = "https://github.com/openai-oss-forks/tokio-tungstenite", rev = "132f5b39c862e3a970f731d709608b3e6276d5f6" }
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "9200079d3b54a1ff51072e24d81fd354f085156f" }

[patch."ssh://git@github.com/openai-oss-forks/tungstenite-rs.git"]
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "9200079d3b54a1ff51072e24d81fd354f085156f" }
