[workspace]
members = [
  "apps/desktop/src-tauri",
  "apps/cli",
  "crates/*",
]
# 2026-05-03 cleanup: 70 codex-rs port crates removed from disk (was FIX-022
# exclude list). Original codex-cli source preserved at ~/Desktop/reference/codex-cli/
# for future re-port if any feature is needed. Shipping binaries (apps/cli +
# apps/desktop/src-tauri) only depend on `agiworkforce-protocol` and
# `agiworkforce-sandbox-policy` via path. Other workspace crates (44) compile
# cleanly via `cargo check --workspace` and may be pruned in a future pass.
exclude = []
resolver = "2"

# Workspace-wide clippy lints (codex-rs `Cargo.toml#[workspace.lints.clippy]`
# pattern per MASTER_PLAN.md Appendix C). Conservative subset: omits
# `unwrap_used` and `expect_used` (the codebase currently has 2,409 such
# sites; flagging them all at once would block every build). Phase B+
# fires reduce that number; we'll re-add those two rules when the count
# is small enough to gate per-PR.
#
# Per-crate Cargo.toml files inherit via `[lints] workspace = true`.
[workspace.lints.clippy]
await_holding_invalid_type = "deny"
await_holding_lock = "deny"
identity_op = "deny"
manual_clamp = "deny"
manual_filter = "deny"
manual_find = "deny"
manual_flatten = "deny"
manual_map = "deny"
manual_memcpy = "deny"
manual_non_exhaustive = "deny"
manual_ok_or = "deny"
manual_range_contains = "deny"
manual_retain = "deny"
manual_strip = "deny"
manual_try_fold = "deny"
manual_unwrap_or = "deny"
needless_borrow = "deny"
needless_borrowed_reference = "deny"
needless_collect = "deny"
needless_late_init = "deny"
needless_option_as_deref = "deny"
needless_question_mark = "deny"
needless_update = "deny"
redundant_clone = "deny"
redundant_closure = "deny"
redundant_closure_for_method_calls = "deny"
redundant_static_lifetimes = "deny"
trivially_copy_pass_by_ref = "deny"
uninlined_format_args = "deny"
unnecessary_filter_map = "deny"
unnecessary_lazy_evaluations = "deny"
unnecessary_sort_by = "deny"
unnecessary_to_owned = "deny"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
panic = "abort"




[profile.dev]
debug = true           # enable debug info for readable backtraces
opt-level = 0
split-debuginfo = "off"


[profile.dev.package."*"]
debug = 0
opt-level = 0

[patch.crates-io]
tokio-tungstenite = { git = "https://github.com/openai-oss-forks/tokio-tungstenite", rev = "132f5b39c862e3a970f731d709608b3e6276d5f6" }
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "9200079d3b54a1ff51072e24d81fd354f085156f" }

[patch."ssh://git@github.com/openai-oss-forks/tungstenite-rs.git"]
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "9200079d3b54a1ff51072e24d81fd354f085156f" }
