[package]
name = "agiworkforce-cli"
version = "1.0.0"
edition = "2021"
authors = ["AGI Automation LLC"]
description = "Multi-provider agentic CLI — 10+ providers (Anthropic, OpenAI, Google, xAI, DeepSeek, Perplexity, Qwen, Moonshot, Zhipu, Ollama, LM Studio, plus user-defined OpenAI-compatible) in one terminal"
license = "Proprietary"
repository = "https://github.com/siddharthanagula3/agiworkforce"
readme = "README.md"
keywords = ["ai", "agent", "cli", "mcp", "llm"]
categories = ["command-line-utilities", "development-tools"]
default-run = "agiworkforce"

[[bin]]
name = "agiworkforce"
path = "src/main.rs"

[lints.rust]
warnings = "warn"
unsafe_code = "deny"
unused = "deny"
unused_imports = "deny"
unused_variables = "deny"
unused_mut = "deny"
dead_code = "deny"

[lints.clippy]
await_holding_lock = "warn"

[dependencies]
agiworkforce-protocol = { path = "../../crates/agiworkforce-protocol" }
agiworkforce-sandbox-policy = { path = "../../crates/sandbox-policy" }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
colored = "2"
indicatif = "0.17"
dialoguer = "0.11"
reqwest = { version = "0.12", features = ["stream", "json", "multipart"] }
rustyline = "14"
futures-util = { version = "0.3", features = ["sink"] }
dirs = "6"
anyhow = "1"
tracing = "0.1.44"
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
sha2 = "0.10"
regex = "1"
bytes = { version = "1.11.1", default-features = false }
cpal = "0.15"
hound = "3.5"
crossterm = "0.28"
ratatui = "0.29"
notify = { version = "7", default-features = false, features = ["macos_fsevent"] }
cron = "0.13"
axum = { version = "0.8", features = ["tokio", "ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
supports-color = "3"
webbrowser = "1"
urlencoding = "2"
once_cell = "1.19"
syntect = "5"
two-face = "0.4"
pulldown-cmark = "0.12"
arboard = "3"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process", "user"] }

[features]
default = []
# Note: previous "full" feature aggregated 10 optional path-deps to codex-rs port crates.
# Those crates were deleted on 2026-05-03 (preserved at ~/Desktop/reference/codex-cli/).
# No source under apps/cli/src/ references those features (verified via grep). If a
# specific capability is needed in the future, port from reference/codex-cli/ as needed.

[dev-dependencies]
tempfile = "3"
