[package]
edition = "2024"

name = "agiworkforce-agent-graph-store"
version = "0.1.0"

[lib]
name = "agiworkforce_agent_graph_store"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.89"
agiworkforce-protocol = { path = "../agiworkforce-protocol" }
agiworkforce-state = { path = "../agiworkforce-state" }
serde = { version = "1", features = ["derive"] }
thiserror = "2.0.17"

[dev-dependencies]
pretty_assertions = "1.4.1"
serde_json = "1"
tempfile = "3.23.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
