[package]
edition = "2024"

name = "agiworkforce-agent-identity"
version = "0.1.0"

[lib]
doctest = false
name = "agiworkforce_agent_identity"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
base64 = "0.22.1"
chrono = "0.4.43"
agiworkforce-protocol = { path = "../agiworkforce-protocol" }
crypto_box = { version = "0.9.1", features = ["seal"] }
ed25519-dalek = { version = "2.2.0", features = ["pkcs8"] }
jsonwebtoken = "9.3.1"
rand = "0.9"
reqwest = { version = "0.12", features = ["cookies", "json"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
pretty_assertions = "1.4.1"
