[package]
name = "agiworkforce-ansi-escape"
version = "0.1.0"
edition = "2024"

[lib]
name = "agiworkforce_ansi_escape"
path = "src/lib.rs"

[dependencies]
ansi-to-tui = "7.0.0"
ratatui = { version = "0.29.0", features = [
    "unstable-rendered-line-info",
    "unstable-widget-ref",
] }
tracing = { version = "0.1.44", features = ["log"] }
