[package]
name = "agiworkforce-api"
version = "0.1.0"
edition = "2024"

[dependencies]
agiworkforce-utils-rustls-provider = { path = "../agiworkforce-utils-rustls-provider" }
async-trait = "0.1.89"
bytes = "1.10.1"
agiworkforce-client = { path = "../agiworkforce-client" }
agiworkforce-protocol = { path = "../agiworkforce-protocol" }
futures = { version = "0.3", default-features = false }
http = "1.3.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.17"
tokio = { version = "1", features = ["macros", "net", "rt", "sync", "time"] }
tokio-tungstenite = { version = "0.28.0", features = [
    "rustls-tls-native-roots",
] }
tungstenite = { version = "0.27.0", features = ["deflate", "proxy"] }
tracing = "0.1.44"
eventsource-stream = "0.2.3"
regex-lite = "0.1.8"
tokio-util = { version = "0.7.18", features = ["codec"] }
url = "2"

[dev-dependencies]
anyhow = "1"
assert_matches = "1.5.0"
pretty_assertions = "1.4.1"
tokio-test = "0.4"
wiremock = "0.6"
reqwest = "0.12"
