[package]
name = "agiworkforce-app-server-test-client"
version = "0.1.0"
edition = "2024"


[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
agiworkforce-app-server-protocol = { path = "../agiworkforce-app-server-protocol" }
agiworkforce-core = { path = "../agiworkforce-core" }
agiworkforce-otel = { path = "../agiworkforce-otel" }
agiworkforce-protocol = { path = "../agiworkforce-protocol" }
agiworkforce-utils-cli = { path = "../agiworkforce-utils-cli" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
tungstenite = { version = "0.27.0", features = ["deflate", "proxy"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
