[package]
name = "agiworkforce-app-server"
version = "0.1.0"
edition = "2024"


[[bin]]
name = "agiworkforce-app-server"
path = "src/main.rs"

[[bin]]
name = "agiworkforce-app-server-test-notify-capture"
path = "src/bin/notify_capture.rs"

[lib]
name = "agiworkforce_app_server"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1.89"
base64 = "0.22.1"
axum = { workspace = true, default-features = false, features = [
    "http1",
    "json",
    "tokio",
    "ws",
] }
agiworkforce-analytics = { path = "../agiworkforce-analytics" }
agiworkforce-api = { path = "../agiworkforce-api" }
agiworkforce-arg0 = { path = "../agiworkforce-arg0" }
agiworkforce-cloud-requirements = { path = "../agiworkforce-cloud-requirements" }
agiworkforce-config = { path = "../agiworkforce-config" }
agiworkforce-core = { path = "../agiworkforce-core" }
agiworkforce-core-plugins = { path = "../agiworkforce-core-plugins" }
agiworkforce-device-key = { path = "../agiworkforce-device-key" }
agiworkforce-exec-server = { path = "../agiworkforce-exec-server" }
agiworkforce-external-agent-migration = { path = "../agiworkforce-external-agent-migration" }
agiworkforce-external-agent-sessions = { path = "../agiworkforce-external-agent-sessions" }
agiworkforce-features = { path = "../agiworkforce-features" }
agiworkforce-git-utils = { path = "../agiworkforce-git-utils" }
agiworkforce-hooks = { path = "../agiworkforce-hooks" }
agiworkforce-otel = { path = "../agiworkforce-otel" }
agiworkforce-shell-command = { path = "../agiworkforce-shell-command" }
agiworkforce-utils-cli = { path = "../agiworkforce-utils-cli" }
agiworkforce-utils-pty = { path = "../agiworkforce-utils-pty" }
agiworkforce-backend-client = { path = "../agiworkforce-backend-client" }
agiworkforce-file-search = { path = "../agiworkforce-file-search" }
agiworkforce-chatgpt = { path = "../agiworkforce-chatgpt" }
agiworkforce-login = { path = "../agiworkforce-login" }
agiworkforce-memories-write = { path = "../agiworkforce-memories-write" }
agiworkforce-mcp = { path = "../agiworkforce-mcp" }
agiworkforce-model-provider = { path = "../agiworkforce-model-provider" }
agiworkforce-models-manager = { path = "../agiworkforce-models-manager" }
agiworkforce-protocol = { path = "../agiworkforce-protocol" }
agiworkforce-app-server-protocol = { path = "../agiworkforce-app-server-protocol" }
agiworkforce-feedback = { path = "../agiworkforce-feedback" }
agiworkforce-rmcp-client = { path = "../agiworkforce-rmcp-client" }
agiworkforce-rollout = { path = "../agiworkforce-rollout" }
agiworkforce-sandboxing = { path = "../agiworkforce-sandboxing" }
agiworkforce-state = { path = "../agiworkforce-state" }
agiworkforce-thread-store = { path = "../agiworkforce-thread-store" }
agiworkforce-tools = { path = "../agiworkforce-tools" }
agiworkforce-uds = { path = "../agiworkforce-uds" }
agiworkforce-utils-absolute-path = { path = "../agiworkforce-utils-absolute-path" }
agiworkforce-utils-json-to-toml = { path = "../agiworkforce-utils-json-to-toml" }
agiworkforce-utils-rustls-provider = { path = "../agiworkforce-utils-rustls-provider" }
chrono = "0.4.43"
clap = { version = "4", features = ["derive"] }
constant_time_eq = "0.3.1"
futures = { version = "0.3", default-features = false }
gethostname = "1.1.0"
hmac = "0.12.1"
jsonwebtoken = "9.3.1"
owo-colors = { version = "4.3.0", features = ["supports-colors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3.23.0"
thiserror = "2.0.17"
time = "0.3.47"
toml = "0.9.5"
toml_edit = "0.24.0"
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
tokio-util = "0.7.18"
tokio-tungstenite = { version = "0.28.0", features = [
tracing = { version = "0.1.44", features = ["log"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "json"] }
url = "2"
uuid = { version = "1", features = ["serde", "v7"] }

[dev-dependencies]
app_test_support = { path = "../app_test_support" }
base64 = "0.22.1"
axum = { workspace = true, default-features = false, features = [
    "http1",
    "json",
    "tokio",
] }
core_test_support = { path = "../core_test_support" }
agiworkforce-model-provider-info = { path = "../agiworkforce-model-provider-info" }
agiworkforce-utils-cargo-bin = { path = "../agiworkforce-utils-cargo-bin" }
flate2 = "1.1.8"
opentelemetry = "0.31.0"
opentelemetry_sdk = "0.31.0"
pretty_assertions = "1.4.1"
reqwest = { version = "0.12", features = ["cookies"] , features = ["rustls-tls"]}
rmcp = { workspace = true, default-features = false, features = [
    "elicitation",
    "server",
    "transport-streamable-http-server",
] }
serial_test = "3.2.0"
tar = { version = "=0.4.45", default-features = false }
tokio-tungstenite = { version = "0.28.0", features = [
tracing-opentelemetry = "0.32.0"
wiremock = "0.6"
shlex = "1.3.0"
