[package]
name = "agiworkforce-app-server"
version = "0.1.0"
edition = "2021"
authors = ["AGI Automation LLC"]
description = "JSON-RPC stdio + WebSocket transport exposing AGI Workforce tools to programmatic clients"
license = "Proprietary"

[lints.rust]
warnings = "warn"
unsafe_code = "deny"
unused = "deny"
unused_imports = "deny"
unused_variables = "deny"
unused_mut = "deny"
dead_code = "deny"

[dependencies]
anyhow = "1"
async-trait = "0.1.89"
axum = { version = "0.8", features = ["tokio", "ws"] }
futures-util = { version = "0.3", features = ["sink"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util", "macros"] }
