[package]
name = "agiworkforce-arg0"
version = "0.1.0"
edition = "2024"

[lib]
name = "agiworkforce_arg0"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
agiworkforce-apply-patch = { path = "../agiworkforce-apply-patch" }
agiworkforce-linux-sandbox = { path = "../agiworkforce-linux-sandbox" }
agiworkforce-shell-escalation = { path = "../agiworkforce-shell-escalation" }
agiworkforce-utils-home-dir = { path = "../agiworkforce-utils-home-dir" }
dotenvy = "0.15.7"
tempfile = "3.23.0"
tokio = { version = "1", features = ["rt-multi-thread"] }
