[package]
name = "agiworkforce-artifacts"
version = "0.1.0"
edition = "2024"

[dependencies]
agiworkforce-package-manager = { path = "../agiworkforce-package-manager" }
reqwest = { version = "0.12" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1", features = ["fs", "io-util", "process", "time"] }
url = "2"
which = "8"

[dev-dependencies]
flate2 = "1.1.4"
pretty_assertions = "1.4.1"
sha2 = "0.10"
tar = "0.4.45"
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt", "rt-multi-thread", "time"] }
wiremock = "0.6"
zip = "2.4.2"
