[package]
edition = "2024"

name = "agiworkforce-aws-auth"
version = "0.1.0"

[lib]
doctest = false
name = "agiworkforce_aws_auth"
path = "src/lib.rs"

[dependencies]
aws-config = "1"
aws-credential-types = "1"
aws-sigv4 = "1"
aws-types = "1"
bytes = "1.10.1"
http = "1.3.1"
thiserror = "2.0.17"

[dev-dependencies]
pretty_assertions = "1.4.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
