[package]
name = "agiworkforce-backend-client"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
agiworkforce-client = { path = "../agiworkforce-client" }
agiworkforce-protocol = { path = "../agiworkforce-protocol" }
agiworkforce-core = { path = "../agiworkforce-core" }

[dev-dependencies]
pretty_assertions = "1.4.1"
