[package]
name = "agiworkforce-backend-openapi-models"
version = "0.1.0"
edition = "2024"


[lib]
name = "agiworkforce_backend_openapi_models"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"

[package.metadata.cargo-shear]
ignored = ["serde_with"]
