[package]
name = "agiworkforce-chatgpt"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
agiworkforce-connectors = { path = "../agiworkforce-connectors" }
agiworkforce-core = { path = "../agiworkforce-core" }
agiworkforce-utils-cli = { path = "../agiworkforce-utils-cli" }
agiworkforce-utils-cargo-bin = { path = "../agiworkforce-utils-cargo-bin" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
agiworkforce-git-utils = { path = "../agiworkforce-git-utils" }

[dev-dependencies]
pretty_assertions = "1.4.1"
tempfile = "3.23.0"
