[package]
name = "agiworkforce-client"
version = "0.1.0"
edition = "2024"

[dependencies]
agiworkforce-utils-rustls-provider = { path = "../agiworkforce-utils-rustls-provider" }
async-trait = "0.1.89"
bytes = "1.10.1"
eventsource-stream = "0.2.3"
futures = { version = "0.3", default-features = false }
http = "1.3.1"
opentelemetry = "0.31.0"
rand = "0.9"
reqwest = { version = "0.12", features = ["json", "stream"] }
rustls = { version = "0.23", default-features = false, features = [
    "ring",
    "std",
] }
rustls-native-certs = "0.8.3"
rustls-pki-types = "1.14.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.17"
tokio = { version = "1", features = ["macros", "rt", "time", "sync"] }
tracing = "0.1.44"
tracing-opentelemetry = "0.32.0"
zstd = "0.13"

[dev-dependencies]
opentelemetry_sdk = "0.31.0"
pretty_assertions = "1.4.1"
tempfile = "3.23.0"
tracing-subscriber = "0.3.22"
