[package]
name = "agiworkforce-cloud-requirements"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
base64 = "0.22.1"
chrono = { version = "0.4.43", features = ["serde"] }
agiworkforce-backend-client = { path = "../agiworkforce-backend-client" }
agiworkforce-core = { path = "../agiworkforce-core" }
agiworkforce-otel = { path = "../agiworkforce-otel" }
agiworkforce-protocol = { path = "../agiworkforce-protocol" }
hmac = "0.12.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2.0.17"
tokio = { version = "1", features = ["fs", "sync", "time"] }
toml = "0.9.5"
tracing = "0.1.44"

[dev-dependencies]
pretty_assertions = "1.4.1"
tempfile = "3.23.0"
tokio = { version = "1", features = ["macros", "rt", "test-util", "time"] }
