[package]
name = "agiworkforce-cloud-tasks-client"
version = "0.1.0"
edition = "2024"

[lib]
name = "agiworkforce_cloud_tasks_client"
path = "src/lib.rs"

[features]
default = ["online"]
online = []
mock = []

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
