[package]
name = "agiworkforce-cloud-tasks-client"
version = "0.1.0"
edition = "2024"

[lib]
name = "agiworkforce_cloud_tasks_client"
path = "src/lib.rs"

[features]
default = ["online"]
online = []
mock = []

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
diffy = "0.4.2"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
agiworkforce-backend-client = { path = "../agiworkforce-backend-client" }
agiworkforce-git-utils = { path = "../agiworkforce-git-utils" }
