
[package]
edition = "2024"

name = "agiworkforce-cloud-tasks-mock-client"
version = "0.1.0"

[lib]
name = "agiworkforce_cloud_tasks_mock_client"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.89"
chrono = "0.4.43"
agiworkforce-cloud-tasks-client = { path = "../agiworkforce-cloud-tasks-client" }
diffy = "0.4.2"
