[package]
name = "agiworkforce-cloud-tasks"
version = "0.1.0"
edition = "2024"

[lib]
name = "agiworkforce_cloud_tasks"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1.89"
base64 = "0.22.1"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
agiworkforce-cloud-tasks-client = { path = "../agiworkforce-cloud-tasks-client", features = [
    "online",
] }
agiworkforce-client = { path = "../agiworkforce-client" }
agiworkforce-core = { path = "../agiworkforce-core" }
agiworkforce-git-utils = { path = "../agiworkforce-git-utils" }
agiworkforce-login = { path = "../agiworkforce-login" }
agiworkforce-utils-cli = { path = "../agiworkforce-utils-cli" }
crossterm = { version = "0.28.1", features = ["event-stream"] }
ratatui = "0.29.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.18"
tracing = { version = "0.1.44", features = ["log"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
unicode-width = "0.2"
owo-colors = { version = "4.3.0", features = ["supports-colors"] }
supports-color = "3.0.2"

[dev-dependencies]
async-trait = "0.1.89"
pretty_assertions = "1.4.1"
