[package]
name = "agiworkforce-code-mode"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false
name = "agiworkforce_code_mode"
path = "src/lib.rs"

[dependencies]
agiworkforce-protocol = { path = "../agiworkforce-protocol" }
async-trait = "0.1.89"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
tracing = "0.1.44"
v8 = "=146.4.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
