[package]
name = "agiworkforce-command-registry"
version = "0.1.0"
edition = "2021"
authors = ["AGI Automation LLC"]
description = "Claude-style command registry contracts for AGI Workforce CLI and TUI surfaces"
license = "Proprietary"

[lints.rust]
warnings = "warn"
unsafe_code = "deny"
unused = "deny"
unused_imports = "deny"
unused_variables = "deny"
unused_mut = "deny"
dead_code = "deny"

[dependencies]

[dev-dependencies]
